# xml2pmx

./: .hgignore  CHANGES  Makefile  Makefile.am  Makefile.in  README.md  acinclude.m4  config.h.in  configure  configure.ac  gc.c  image.c  interp.c  keiko.h  kickstart.c  loader.c  obx.h  platform.h.in  primtab0.c  support.c  update  wrapper.c  xmain.c
obsrc/: Complete.m  Fifo.m  Makefile  MyFiles.m  Testbed.m  b.m  patch1  patch2  patch3  umlaut.sed  xml2pmx.x
runtime/: Makefile  Makefile.am  Makefile.import  Makefile.in  action.c  config.h  gc.c  image.c  interp.c  keiko.h  kickstart.c  loader.c  obx.h  preload.c  primtab0.c  support.c  wrapper.c  xmain.c
src/: Args.c  Builtin.c  Complete.m  Fifo.m  LCout.m  Makefile  Makefile.import  MyFiles.m  README  Strings0.m  Testbed.m  action.c  b.m  config.h  primtab.c  wrapper.c  xml2pmx.x
test/: k545_korr25_orig.exp  p77.exp
